<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gachi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- title -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_festival">Festival</string>
    <string name="title_gachi">Gachi</string>
    <string name="title_chat">Chat</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_myinfo">My info</string>
    <string name="title_search">Search</string>
    <string name="title_gachi_detail">Gachi info</string>
    <string name="title_gachi_participant">Participants</string>

    <string name="title_signup">Sign up</string>
    <string name="title_signin_with_email">Sign in with email</string>
    <string name="title_signin_with_facebook">Sign in with facebook</string>

    <!-- festival -->
    <string name="title_popular_festivals">Popular festivals</string>
    <string name="title_popular_gachi">Popular gachi</string>

    <string name="title_festival_detail_info">Info</string>
    <string name="title_festival_detail_lineup">Line Up</string>
    <string name="title_festival_detail_gachi">Gachis</string>

    <!-- search -->
    <string name="search_festival_hint">What is the festival to look for?</string>
    
    <!-- gachi -->
    <string name="gachi_participate">participate</string>
    <string name="gachi_to_chat">chat</string>

    <!-- chat -->
    <string name="chat_input_message">Input message</string>
    <string name="chat_send">send</string>

    <!-- alarm -->
    <string name="alarm_accept">accept</string>

    <!-- myinfo -->
    <string name="info_modify">modify</string>
    <string name="info_logout">logout</string>

    <!-- login -->
    <string name="login_skip">skip</string>
    <string name="login_account_yet">Do not have an account yet?</string>
    <string name="login_title">Go together\nwith gachi</string>

    <!-- signup -->
    <string name="email">email</string>
    <string name="password">password</string>
    
    <!-- add info -->
    <string name="title_nickname">nickname</string>
    <string name="title_age">age</string>
    <string name="title_gender">gender</string>
    <string name="title_region">region</string>
    <string name="title_genre">genre</string>

    <string name="input_correctly">Please enter the correct value</string>

    <string name="male">male</string>
    <string name="female">female</string>

    <string name="next">next</string>
    <string name="apply">apply</string>

    <string name="nickname_is_required">This is a required field</string>
    <string name="region_select">Please select the area you live in</string>
    <string name="genre_select">Please select your preferred genre</string>
    
    <string name="region_seoul">Seoul</string>
    <string name="region_gyeonggi">Gyeong-gi</string>

    <string name="region_incheon">Incheon</string>
    <string name="region_busan">Busan</string>
    <string name="region_daegu">Daegu</string>
    <string name="region_gwangju">Gwangju</string>
    <string name="region_daejeon">Daejeon</string>
    <string name="region_ulsan">Ulsan</string>
</resources>