<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_festival"
        android:icon="@drawable/ic_festival"
        android:title="@string/title_festival" />

    <item
        android:id="@+id/navigation_gachi"
        android:icon="@drawable/ic_gachi"
        android:title="@string/title_gachi" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/title_alarm" />

    <item
        android:id="@+id/navigation_myinfo"
        android:icon="@drawable/ic_myinfo"
        android:title="@string/title_myinfo" />
</menu>
